...
            android:id="@+id/action_splash_to_flow_choice"
            app:destination="@id/flowChoiceFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splash_to_employee_home"
            app:destination="@id/employeeHomeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splash_to_connection_error"
            app:destination="@id/connectionErrorFragment" />
        <action
...

    <fragment
        android:id="@+id/employeeHomeFragment"
        android:name="com.example.astro_mobile.employee.home.EmployeeHomeFragment"
        android:label="Home do Colaborador">
        <action
            android:id="@+id/action_employee_home_to_chat"
            app:destination="@id/chatFragment"
            app:enterAnim="@anim/push_enter"
            app:exitAnim="@anim/push_exit"
            app:popEnterAnim="@anim/push_pop_enter"
            app:popExitAnim="@anim/push_pop_exit" />
    </fragment>
...
