...
        </LinearLayout>
        <com.google.android.material.button.MaterialButton android:id="@+id/button_ai_sessions_page_retry"
            android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginHorizontal="24dp"
            android:text="@string/chat_retry" android:textAllCaps="false" android:visibility="gone"
            android:fontFamily="@font/montserrat_family" android:textColor="@color/astro_light_background" android:letterSpacing="0"
            style="@style/Widget.MaterialComponents.Button.TextButton" />
        <FrameLayout android:id="@+id/button_ai_sessions_new" style="@style/AstroPrimaryAction"
            android:layout_marginHorizontal="@dimen/astro_content_margin" android:layout_marginTop="4dp" android:layout_marginBottom="8dp"
            android:contentDescription="@string/ai_sessions_new">
            <TextView style="@style/AstroPrimaryActionLabel" android:text="@string/ai_sessions_new" />
            <ImageView android:layout_width="@dimen/astro_control_icon_size" android:layout_height="@dimen/astro_control_icon_size"
                android:layout_gravity="start|center_vertical" android:layout_marginStart="@dimen/astro_control_icon_inset"
                android:src="@drawable/chat_add" android:scaleType="fitCenter"
...
